--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "trace3"
+name = "pydep"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-
-[[bin]]
-name = "bimbam"
-path = "src/bimbam.rs"
 
 
 [dependencies]
